# django-metachoices

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  publish.bat  pyproject.toml  tasks.bat  tox.ini
.github/workflows/: ci.yml  release.yml
django_metachoices/: README.md  __init__.py  apps.py  fields.py  models.py
django_metachoices/migrations/: 0001_initial.py  0002_storage_count.py  0003_alter_storage_count.py
metachoices/: __init__.py  admin.py  apps.py  fields.py  mixins.py
metachoices/migrations/: 0001_initial.py  0002_storage_count.py  0003_alter_storage_count.py
scripts/: build.bat  build.py  publish.bat  publish.py  sync_metadata.py  tasks.py
tests/: __init__.py  conftest.py  test_metachoices.py
